# opentherm

./: CMakeLists.txt  README.md  ftoa.c  hex_gen.c  main.c  message_table.c  opentherm.c  opentherm_json.c  opentherm_master.C  opentherm_simulator.c  opentherm_slave.c  opentherm_test.c
inc/: config.h  config.h.in  ftoa.h  hex_gen.h  message_table.h  opentherm.h  opentherm_daq_def.h  opentherm_data_def.h  opentherm_json.h  opentherm_master.h  opentherm_simulator.h  opentherm_slave.h  opentherm_test.h  opentherm_version.h  opentherm_version.h.in  test.h
tests/: CMakeLists.txt  hex_gen_test.c
